Did some more work on the page

--- a/index.html
+++ b/index.html
@@ -1,1 +1,83 @@
-<p>Richard Munie</p>
+<!DOCTYPE html>
+<html>
+<head>
+
+</head>
+
+<title>
+
+</title>
+
+<body>
+    <header>
+        <h1>The Turtle Fiddle Project</h1>
+        <h3>Telling the tale of how the turtle fiddle came to be.</h3>
+        <h4>An Evolution...</h4>
+        <nav>
+            <ul>
+                <li><a href="#start">The Early Stages</a></li>
+                <li><a href="#shape">Taking Shape</a></li>
+                <li><a href="#details">All in the Details</a></li>
+                <li><a href="#assembly">The Vision Coming Together</a></li>
+                <li><a href="#case">The Case</a></li>
+            </ul>
+        </nav>
+
+    </header>
+
+    <main>
+        <article>
+            <section>
+                <a name="start"></a>
+                <h2>The Early Stages</h2>
+                <p>It all began with inspiration from a primitive fiddle I had seen in a <a href="https://www.google.com/search?q=saint%20louis%20violin%20shop&ie=utf-8&oe=utf-8&client=firefox-b-1&npsic=0&rflfq=1&rlha=0&rllag=38600002,-90292396,4030&tbm=lcl&rldimm=16716875827013104991&ved=0ahUKEwiEr7Xts__ZAhXQ0FMKHR_wCc8QvS4IXjAA&rldoc=1&tbs=lrf:!2m4!1e17!4m2!17m1!1e2!2m1!1e2!2m1!1e3!3sIAE,lf:1,lf_ui:10#rlfi=hd:;si:16716875827013104991;mv:!1m3!1d77912.10219375486!2d-90.31376569999999!3d38.637746!2m3!1f0!2f0!3f0!3m2!1i122!2i300!4f13.1;tbs:lrf:!2m1!1e2!2m1!1e3!2m4!1e17!4m2!17m1!1e2!3sIAE,lf:1,lf_ui:10">violin shop</a> in Saint Louis, Mo. The violin was rough, primitive and had a face if I remember correctly. A girl I was crushing on went there to buy an upgrade from her first violin. Being fond of taking my fiddle down to the river and wanting her to have a fiddle that she could take as well, without worrying about damaging a pricey instrument, I figured I would just carve out a primitive instrument like the one I saw on the wall at the shop. From there it started with an oak log.</p>
+                <img src="the_log.jpg" />
+                <p>The log I had procured from a friend who was in the tree felling business, a nice oak log. Armed with some primitive tools I began to hew away at the log, intent to shape it into a turtle which I happened to know the young lady fancied. It was hot that summer, the mosquitoes were ruthless and unrelenting. I would sometimes take the work into the basement just to avoid thier assault.</p>
+                <img src="the_tools.jpg" />
+            </section>
+
+            <section>
+                <a name="shape"></a>
+                <h2>Taking Shape</h2>
+                <p>still using primitive tools I began the arduous task of hollowing out the inside of the log. This is the point I called the fruit bowl stage for reasons readily apparent. I figured if anything I could have a fruit bowl. By this time the muse for which I toiled to bestow the fruit of this labor had begun seeing a deusche bag but I was undetered. The work had become a meditation for me of sorts and a vision was forming in my head. New elements in the design stirred in my head as I hammered away at the chunck of oak. I had consulted at one point a luthier, looking for a fingerboard. He told me I didn't want to use oak, it was too heavy a wood and would not produce any sound. I also had shown my work to a carver who had sharpened a gouge for me. He said I didn't want to use oak, it would split on me. It had, I glued it. Needless to say, I ignored any expert advice that was given.</p>
+                <img src="fruit_bowl_stage.jpg"/>
+                <p>At one point I realized that there is a reason that violins are waisted. That means the go in at the middle of the bodies kind of like the waist of a woman. The purpose of waisting is so that the bow is free to attack the strings at an angle in order to engage a single string. This is about time I started to give the turtle shell details and I now had to bring in the waist even though I had already begun to hollow it out. Had I hollowed it out to much? This is where forethought and designing ahead of execution might have saved me from some worry but I forged on ahead and things began to take shape.</p>
+                <img src="Taking_shape.jpg"/>
+            </section>
+
+            <section>
+                <a name="details"></a>
+                <h2>All in the Details</h2>
+                <p></p>
+                <img src=""/>
+                <p></p>
+                <img src=""/>
+            </section>
+            
+            <section>
+                <a name="assembly"></a>
+                <h2>The Vision Coming Together</h2>
+                <p></p>
+                <img src=""/>
+                <p></p>
+                <img src=""/>
+            </section>
+            
+            <section>
+                <a name="case"></a>
+                <h2>The Case</h2>
+                <p></p>
+                <img src=""/>
+                <p></p>
+                <img src=""/>
+            </section>
+
+        </article>
+    </main>
+
+    <footer>
+
+    </footer>
+
+</body>
+</html>
