done adding html, for now

--- a/index.html
+++ b/index.html
@@ -48,28 +48,42 @@
             <section>
                 <a name="details"></a>
                 <h2>All in the Details</h2>
-                <p></p>
-                <img src=""/>
-                <p></p>
-                <img src=""/>
+                <p>Several design elements came to me as I hammered away in a near trance state that hot summer. One such idea was to make the tuning pegs dragonflies in the mouth of the turtle. The tail piece would be a frog. To this end I went to a specialty <a href="https://www.hibdonhardwood.com/">wood supplier</a> in Saint Louis. I got some black african wood and proceded to carve out some of the pieces that would be needed to complete the work. The frog I was quite pleased with and it was fun to carry around, felt good in the hand almost like some voo doo fetish. The dragon flies turned out ok but I am still to this day not satisfied that I cannot produce better.</p>
+                <img src="dragonfilies.jpg"/>
+                <img src="feet.jpg"/>
+                <p>I had ordered a piece of spruce for the sound board. I figured I would atleast use the appropriate wood for the part that is most crucial to producing sound. I carved sound holes, not quite the usual f holes you see on a violin but something that fit the theme. Turtle feet! And to these I added claws from the wood I got at the special wood shop.</p>
+                <img src="claws.jpg"/>
+                <img src="more_claws.jpg"/>
+                <p>I also got it signed by the girls favorite band. I took it to the show we went to see and while she was not looking I snuck it in to my friend that worded sound at the Paegent and he got it to the members of Trampled by Turtles who signed it. I picked it up the next day, took the <a href="https://www.metrostlouis.org/metrolink/">Metrolink</a>. Slick. Never saw it coming.</p>
+                <img src="got_color.jpg"/>
+                <img src="got_signed.jpg"/>
             </section>
             
             <section>
                 <a name="assembly"></a>
                 <h2>The Vision Coming Together</h2>
-                <p></p>
-                <img src=""/>
-                <p></p>
-                <img src=""/>
+                <p>My brothers violin teacher was instrumental in bringing the final product to life. He helped with the set up, the peg shaping and boring the peg holes. He advised me on how to get the neck and finger board all set up. Provided strings. A big shout out to Philip Tinge, for his help in realizing the vision.</p>
+                <img src="finishing.jpg"/>
+                <img src="setup.jpg"/>
+                <p>Another thing Philip had helped me with was coming up with a chin rest. A fish I decided. And with some materials he supplied it was attached to a lilly pad.</p>
+                <img src="chinrest.jpg"/>
+                <img src="together.jpg"/>
             </section>
             
             <section>
                 <a name="case"></a>
                 <h2>The Case</h2>
-                <p></p>
-                <img src=""/>
-                <p></p>
-                <img src=""/>
+                <p>Several inspirations lead to the creation of the case, a whole work in and of itself. One was a picture of a lake I had found where the reflection was absolutely serene. I decided to carve it in the inside of a log I had split with a pick axe and a railroad crowbar I found on the road. I proceded to carve the scene in relief and then painted the entire thing, like a boss.</p>
+                <img src="casework.jpg"/>
+                <img src="case_painted.jpg"/>
+                <p>Another was a book <a ref="https://www.amazon.com/Violin-Hunter-William-Silverman/dp/0876665776">"The Violin Hunter"</a> which I had read while waiting for my brothers lesson to end so we could do work on the violin. In the story, the main character walks into a saloon where violins are sold, in Paris. He is looking weatherworn and carries a sack. The proprietor asks the man if he can help him at which point the man begins to pull violins out of his sack and place them on the counter. The man then takes on of the violins and holds it up to the window so the light can hit it. This gesture is what I tried to capture with the hands holding the violin. That and an homage to the lady of the lake. I put on my tinkers cap and got to work making the top hand mechanized so that it grasps the neck of the fiddle when the case closes.</p>
+                <img src="added_hands.jpg"/>
+                <p>Also added a foot to ensure that the case would not roll if opened like a regular violin case on its side.</p>
+                <img src="foot.jpg"/>
+                <p>The case is as heavy as a log</p>
+                <img src="outside_case.jpg"/>
+                <p>At the carving show in Belleville, IL, I won the peoples choice award, and third place in the miscellaneous category.</p>
+                <img src="peoples_choice.jpg"/>
             </section>
 
         </article>
