had a few minor changes

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <img src="claws.jpg"/>
                 <img src="more_claws.jpg"/>
                 <p>I also got it signed by the girls favorite band. I took it to the show we went to see and while she was not looking I snuck it in to my friend that worded sound at the Paegent and he got it to the members of Trampled by Turtles who signed it. I picked it up the next day, took the <a href="https://www.metrostlouis.org/metrolink/">Metrolink</a>. Slick. Never saw it coming.</p>
-                <img id="colored" src="got_color.jpg"/>
+                <img class="narrow" src="got_color.jpg"/>
                 <img src="got_signed.jpg"/>
                 
             </section>
